# ghcp-mar-2026

./: notes.md
products-rest-api/: .env.example  .gitignore  README.md  main.py  notes.md  pyproject.toml  pytest.ini  skills-lock.json
products-rest-api/.github/: copilot-instructions.md
products-rest-api/app/: __init__.py  config.py  constants.py  database.py  main.py
products-rest-api/app/models/: __init__.py  product.py
products-rest-api/app/repositories/: __init__.py  product_repository.py
products-rest-api/app/routes/: products.py
products-rest-api/app/schemas/: base.py  product.py
products-rest-api/app/services/: product_service.py
products-rest-api/app/utils/: __init__.py  exceptions.py
products-rest-api/docs/: arch.md  project.md  testable-data.md
products-rest-api/migrations/: alembic.ini  env.py
products-rest-api/migrations/versions/: 001_initial.py
products-rest-api/tests/: conftest.py  test_products.py
